[package]
name = "test-data-genterator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
subprocess = "0.2.9"

[profile.release]
opt-level = 3

[[bin]]
name = "tdg"
path = "src/main.rs"